--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
 		"svelte": "^5.0.0",
 		"tailwindcss": "^4.0.0",
 		"vite": "^6.2.6"
+	},
+	"dependencies": {
+		"lucide-svelte": "^0.511.0",
+		"svelte-5-french-toast": "^2.0.4"
 	}
 }
