--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vite": "^6.2.6"
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.2.0",
     "lucide-svelte": "^0.511.0",
     "svelte-5-french-toast": "^2.0.4",
     "vercel": "^42.3.0"
